# opnm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/pnm/: common.hpp  pnm.hpp
include/pnm/matrix/: AbstractMatrix1D.hpp  BitArray8.hpp  BitMatrix1D.hpp  StandardMatrix1D.hpp
include/pnm/pbm/: PBM.hpp
include/pnm/pgm/: PGM.hpp
include/pnm/pixels/: depth.hpp  grayscale.hpp  monochrome.hpp  rgb.hpp
include/pnm/pnm/: IPNM.hpp.old
include/pnm/ppm/: PPM.hpp
src/pnm/: Header.hpp  parse_utils.hpp  pnm_common.hpp
src/pnm/pbm/: PBM.cpp
src/pnm/pgm/: PGM.cpp
src/pnm/ppm/: PPM.cpp
